--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/module-alias": "^2.0.0",
+    "@types/mongoose": "^5.10.4",
     "@types/node": "^14.14.37",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
@@ -54,6 +55,7 @@
     "body-parser": "^1.19.0",
     "config": "^3.3.6",
     "express": "^4.17.1",
-    "module-alias": "^2.2.2"
+    "module-alias": "^2.2.2",
+    "mongoose": "^5.12.3"
   }
 }
